--- a/gamegrid.lpi
+++ b/gamegrid.lpi
@@ -25,12 +25,6 @@
     </RunParams>
     <RequiredPackages>
       <Item>
-        <PackageName Value="GR32_Lazarus"/>
-      </Item>
-      <Item>
-        <PackageName Value="GR32_DSGN_Lazarus"/>
-      </Item>
-      <Item>
         <PackageName Value="LCL"/>
       </Item>
     </RequiredPackages>
@@ -63,6 +57,7 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
+      <OtherUnitFiles Value="graphics32;graphics32/Source"/>
       <UnitOutputDirectory Value="lib/$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Linking>
